<resources>
    <string name="app_name">DuluthBikes</string>
    <string name="title_activity_maps">Duluth Bikes</string>
    <string name="facebook_app_id">1246493272150923</string>

    <string-array name="Options">
        <item>Events</item>
        <item>Reports</item>
        <item>Get a Discount</item>
        <item>Tours</item>
        <item>About</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings2">Settings2</string>
    <string name="settings3">Settings3</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">Hx7zByXJQQ20arq9CofpBthS1</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">
        6zALqY7lSw8DthHAdugE3xwnoI4wztCM0HY3vjHyi1HRmlcxIU</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Drawer -->
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="report">Report Road</string>
    <string name="tours">Tours</string>
    <string name="discount">Get Discount</string>
    <string name="reportApp">Report App</string>
    <string name="about">About</string>
    <string name="rideHistory">Ride History</string>

    <!-- Other Strings -->
    <string name="START">START</string>
    <string name="Pause">Pause</string>
    <string name="Resume">RESUME</string>
    <string name="Stats">Stats</string>
    <string name="Finish">Finish</string>
    <string name="Speed">Speed</string>
    <string name="Distance">Distance</string>
    <string name="image">image</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="skip_sign_in">Skip for now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email must be in the correct format!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="Username">Username</string>
    <string name="hint">You username must be more than 3 characters,
        your password must be more than 6 characters,
        and contain no special characters like !@#$%^*()"</string>
    <string name="Password">Password</string>
    <string name="usernameLengthReq">must be at least 3 characters long!</string>
    <string name="passwordLengthReq">must be at least 6 characters long!</string>
    <string name="charReq">must not contain special characters!</string>
    <string name="register">register</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="noUsername">You are not logged in!</string>
    <string name="createAccount">Create an account</string>

    <!-- Strings for stats-->
    <string name="distanceLabel">Distance\n(km):</string>
    <string name="timelapseLabel">Time Lapsed:</string>
    <string name="avSpeedLabel">Avg Speed\n(km/hour):</string>
    <string name="startFinish">Times:</string>
    <string name="sTimeLabel">Start:</string>
    <string name="fTimeLabel">Finish:</string>
    <string name="totDistLabel">Total\nDistance (km):</string>
    <string name="totDistLabelNoBreak">Total Distance:</string>
    <string name="avgDistLabel">Average\nDistance (km):</string>
    <string name="avgDistLabelNoBreak">Average Distance:</string>
    <string name="totTimeLabel">Total Time:</string>
    <string name="avgTimeLabel">Average Time:</string>
    <string name="total">Total: </string>
    <string name="average">Average: </string>
    <string name="rideHistoryLabel">Ride History:</string>
    <string name="DONE">DONE</string>
    <string name="shareRideLabel">Share Ride</string>
    <string name="shareRideTo">Share ride to...</string>

    <string name="DisclaimerReportApp">This app is in a development stage.
        However, we would like to hear what you think about it.
        Please provide your feedback via Google Form by following the link below.
        Thank you!</string>
    <string name="feedbackLink"><a href="https://goo.gl/forms/NlAyjQBkhZ9iLqUm1">Feedback Form</a></string>

    <string name="About1">This is a campaign app developed for Duluth Bikes Coalition to improve head count campaigns.
The main goal is to collect information about rides and use that data for cycling advocacy in Duluth.</string>
    <string name="About2">SECURITY</string>
    <string name="About3">This app does not encrypt data when sending to a server.</string>
    <string name="About4">RIDE RECORDING</string>
    <string name="About5">After clicking START, you need to click FINISH for the ride to be sent up to a database.
        The app will ask you to give permission to use location.</string>
    <string name="About6">REPORT ROADS</string>
    <string name="About7">Report road issues by sending a photo and description of a problem to Duluth Bikes.</string>
    <string name="About8">REPORT APP</string>
    <string name="About9">For testing purposes, report issues with the app using Google form.
        Hyperlink is posted under Report App section.</string>
    <string name="About10">EVENTS</string>
    <string name="About11">Learn about news and upcoming cycling events.
        Data is pulled from Duluth Bikes website.</string>
    <string name="About12">DISCOUNTS</string>
    <string name="About13">Look for businesses which provide discounts for cyclists.</string>

    <string name="IntroMessage">Every ride that you record helps to make Duluth a place where
        bicycling is easy, safe, and fun for everyone.\nThank you for driving change!</string>

    <string name="lifetimeStats_file_key">com.example.duluthbikes.LIFETIMESTATS_FILE_KEY</string>
    <string name="lifetimeStats_totDist">totalDistance</string>
    <string name="lifetimeStats_avgDist">avgDistance</string>
    <string name="lifetimeStats_totTime">totalTime</string>
    <string name="lifetimeStats_avgTime">avgTime</string>
    <string name="lifetimeStats_rideNumber">rideNumber</string>
    <string name="lifetimeStats_date">date</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="kmh">km/h</string>
    <string name="milesh">miles/h</string>

    <string name="eraseAllRides">Erase All Rides</string>
    <string name="eraseAllRidesToast">All rides have been erased!</string>
    <string name="eraseAllRidesPopup">Are you sure you want to erase all your rides?</string>
    <string name="uploadImageFrom">Upload image from…</string>
    <string name="profilePicUpdateGood">Successfully changed profile picture!</string>
    <string name="profilePicUpdateFail">Profile picture upload failed!</string>
    <string name="profilePicLocation">_profile_picture</string>
    <string name="_0_0_km">0.0 km</string>
    <string name="_00_00_00">00:00:00</string>

    <!-- strings related to settings -->
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile / Settings</string>
    <string name="resetStats">Reset Stats</string>
    <string name="dialog_reset_confirmation">Are you sure you would like to reset your local stats?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="dialog_sign_out_confirmation">Are you sure you would like to sign out?</string>

    <!-- strings related to notifications settings -->
    <string name="notifications">Notifications</string>
    <string name="about_notifications">Set the time you would like a notification to go off every day to remind you to go on a bike ride.</string>
    <string name="set_time">Set</string>
    <string name="notifications_toggle">Notifications Toggle</string>
    <string name="notifications_active">Notifications are active</string>
    <string name="notifications_inactive">Notifications are inactive</string>
    <string name="bike_time">It\'s time for your bike ride!</string>
    <string name="notifications_set">Notifications will go off every day at </string>

    <!-- strings related to leaderboard -->
    <string name="leaderboard">Leaderboard</string>

    <string name="localLeaderboard">Local Leaderboard</string>
    <string name="globalLeaderboard">Global Leaderboard</string>
    <string name="rank1">Rank 1</string>
    <string name="rank2">Rank 2</string>
    <string name="rank3">Rank 3</string>
    <string name="name">Name:</string>
    <string name="updateLeaderboard">Refresh Leaderboard</string>

    <string name="sign_in_with_google">Sign in with Google</string>



    <!-- strings related to suggested places -->
    <string name="bridge">The Aerial Lift Bridge is a landmark in the Duluth. </string>


    <!-- strings related to friends -->
    <string name="friends">Friends</string>
    <string name="searchForFriends">Search for friends…</string>
    <string name="defaultFriendName">First Last</string>
    <string name="addFriend">Add Friend</string>
    <string name="removeFriend">Remove Friend</string>
    <string name="friendAdded">Friend added!</string>
    <string name="friendRemoved">Friend removed!</string>
    <string name="add_remove_friend">Add/Remove Friend</string>
    <string name="friendsCount">Friends (#):</string>

</resources>
