<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="DD/MM/YY"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/label"
            android:layout_margin="5dp"
            android:layout_below="@id/dateLabel">

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:text="@string/distanceLabel"
                android:textAlignment="4"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/avSpeedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:textSize="20sp"
                android:text="@string/avSpeedLabel"
                android:textAlignment="4"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/labeltext"
            android:layout_below="@+id/label"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0.00"
                android:textAlignment="4"
                android:textSize="40dp"
                android:background="@drawable/back"/>

            <TextView
                android:id="@+id/averageSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="4"
                android:layout_weight="1"
                android:text="0.00"
                android:textSize="40dp"
                android:background="@drawable/back"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/labeltext"
            android:id="@+id/times"
            android:layout_margin="5dp"
            android:background="@drawable/back">

            <TextView
                android:id="@+id/startTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sTimeLabel"
                android:layout_weight=".2"
                android:textAlignment="textEnd"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="00:00:00"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/finishTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/fTimeLabel"
                android:textAlignment="textEnd"
                android:layout_weight=".2"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight=".8"
                android:text="00:00:00"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/times"
            android:weightSum="2"
            android:orientation="vertical"
            android:id="@+id/elapsedtime"
            android:background="@drawable/back"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/timeLapseLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/timelapseLabel"
                android:textSize="20dp"
                android:textAlignment="4"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/timeLapsed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="4"
                android:layout_weight="1"
                android:text="00:00:00"
                android:textSize="40sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/shareButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons"
            android:text="@string/shareRideLabel"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons"
            android:onClick="doneWithRide"
            android:text="@string/DONE"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
