<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userTabScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/distHeadBox"
                android:layout_margin="5dp"
                android:layout_below="@id/distValBox">

                <TextView
                    android:id="@+id/labelTotDist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:text="@string/totDistLabel"
                    android:textAlignment="4"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/labelAvgDist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:textSize="20sp"
                    android:text="@string/avgDistLabel"
                    android:textAlignment="4"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/distValBox"
                android:layout_below="@+id/timeHeadBox"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/homeTotalDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00"
                    android:textAlignment="4"
                    android:textSize="40dp"
                    android:background="@drawable/back"/>

                <TextView
                    android:id="@+id/homeAvgDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="4"
                    android:layout_weight="1"
                    android:text="0.00"
                    android:textSize="40dp"
                    android:background="@drawable/back"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/timeHeadBox"
                android:layout_margin="5dp"
                android:layout_below="@id/timeValBox">

                <TextView
                    android:id="@+id/totTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:text="@string/totTimeLabel"
                    android:textAlignment="4"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/labelAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:textSize="20sp"
                    android:text="@string/avgTimeLabel"
                    android:textAlignment="4"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/timeValBox"
                android:layout_below="@+id/rideHistHeadBox"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/homeTotalTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="4"
                    android:textSize="40dp"
                    android:background="@drawable/back"/>

                <TextView
                    android:id="@+id/homeAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="4"
                    android:layout_weight="1"
                    android:textSize="40dp"
                    android:background="@drawable/back"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal"
                android:id="@+id/rideHistHeadBox"
                android:layout_margin="5dp"
                android:layout_below="@id/rideHistValBox">

                <TextView
                    android:id="@+id/rideHist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:text="@string/rideHistoryLabel"
                    android:textAlignment="4"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/rideHistValBox"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/allRideDataGoesHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="0"
                    android:textSize="30dp"
                    android:background="@drawable/back"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_eraseAllRides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eraseAllRides"
            />

    </LinearLayout>

</ScrollView>
